<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/display_text"
        android:text="@string/default_display_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/primary" >

        <TableLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/seven"
                    style="@style/num_pad"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/eight"
                    style="@style/num_pad"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/nine"
                    style="@style/num_pad"
                    android:text="@string/nine" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/four"
                    style="@style/num_pad"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/five"
                    style="@style/num_pad"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/six"
                    style="@style/num_pad"
                    android:text="@string/six" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/one"
                    style="@style/num_pad"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/two"
                    style="@style/num_pad"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/three"
                    style="@style/num_pad"
                    android:text="@string/three" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/zero"
                    style="@style/num_pad"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/decimal"
                    style="@style/num_pad"
                    android:text="@string/decimal" />

                <Button
                    android:id="@+id/equal_sign"
                    style="@style/num_pad"
                    android:text="@string/equal_sign" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:background="@color/primary_dark">

            <ImageButton
                android:id="@+id/backspace"
                style="@style/operations_pad"
                android:src="@drawable/backspace" />

            <Button
                android:id="@+id/division"
                style="@style/operations_pad"
                android:text="@string/divide" />

            <Button
                android:id="@+id/multiplication"
                style="@style/operations_pad"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/subtraction"
                style="@style/operations_pad"
                android:text="@string/subtract" />

            <Button
                android:id="@+id/addition"
                style="@style/operations_pad"
                android:text="@string/add" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>